global.style.css
html,
body {
  --custom-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  --custom-bg-color: #101010;
  --custom-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.8);
  --custom-color: #000000;
  --custom-color-brand: #FFEB8A;
  --custom-color-secondary: #666;
  --custom-border: 1px solid lightgray;
  --custom-spacing: 5px;

  padding: 0;
  margin: 0;
}

* {
  box-sizing: border-box;
}


/* Grid */

.container {
  width: 90%;
}

@media only screen and (min-width: 60em) {
  /* 960px */
  .container {
    width: 100%;
    max-width: 60rem;
  }
}

/* Avatar */
.avatar {
  border-radius: 80px;
  overflow: hidden;
  max-width: 100%;
}
.avatar.image {
  object-fit: cover;
}
.avatar.no-image {
  background-color: lightgray;
  border: 1px solid rgb(200, 200, 200);
}

/* Forms */

label {
  display: block;
  margin: 5px 0;
  color: var(--custom-color-secondary);
  font-size: 0.8rem;
}

input, textarea {
  width: 100%;
  border-radius: 5px;
  border: var(--custom-border);
  padding: 15px 15px;
  font-size: 1rem;
  font-family: inherit;
}

input[disabled] {
  color: var(--custom-color-secondary);
  cursor:not-allowed;
}

/* Utils */

.block {
  display: block;
  width: 100%;
}
.inline-block {
  display: inline-block;
  width: 100%;
}
.flex {
  display: flex;
}
.flex.column {
  flex-direction: column;
}
.flex.row {
  flex-direction: row;
}
.flex.flex-1 {
  flex: 1 1 0;
}
.flex-end {
  justify-content: flex-end;
}
.flex-center {
  justify-content: center;
}
.items-center {
  align-items: center;
}
.text-sm {
  font-size: 0.8rem;
  font-weight: 300;
}
.font-light {
  font-weight: 300;
}
.opacity-half {
  opacity: 50%;
}

/* Button */

button,
.button {
  color: #fff;
  border: var(--custom-border);
  background-color: var(--custom-bg-color);
  display: inline-block;
  text-align: center;
  border-radius: var(--custom-border-radius);
  padding: 0.5rem 1rem;
  cursor: pointer;
  font-size: 1rem;
  padding: 15px;
  border: none;
  border-radius: 50px;
  margin-block: 10px;
}

button.primary,
.button.primary {
  color: #000000;
  background-color: var(--custom-color-brand);
  border: none;
}

body {
  background: #A39797;
  font-family: Helvetica, Arial, Sans-Serif;
}

